--- a/Timers/Timers.ioc
+++ b/Timers/Timers.ioc
@@ -49,10 +49,8 @@ ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
 TIM3.Period=49999
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-RTC.IPParameters=Format,Minutes,Minutes_A-RTC OUT,Seconds_A-RTC OUT
 PA8.GPIOParameters=PinState
 Mcu.Pin6=PB3
-RTC.Format=RTC_FORMAT_BIN
 Mcu.Pin7=VP_RTC_VS_RTC_Activate
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 ProjectManager.RegisterCallBack=
@@ -71,7 +69,6 @@ Mcu.Pin3=PA8
 Mcu.Pin4=PA13
 Mcu.Pin5=PA14
 ProjectManager.ProjectBuild=false
-RTC.Minutes=5
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PB3.Mode=Trace_Asynchronous_SW
@@ -137,14 +134,12 @@ Mcu.Pin12=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
 RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-RTC.Minutes_A-RTC\ OUT=5
 TIM1.Period=49999
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.APB1Freq_Value=36000000
-RTC.Seconds_A-RTC\ OUT=10
 ProjectManager.CustomerFirmwarePackage=
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.LibraryCopy=1
 PA8.PinState=GPIO_PIN_RESET
-isbadioc=false
+isbadioc=true
