--- a/Timers/Timers.ioc
+++ b/Timers/Timers.ioc
@@ -49,6 +49,7 @@ ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
 TIM3.Period=49999
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+RTC.IPParameters=Seconds_A-RTC OUT
 PA8.GPIOParameters=PinState
 Mcu.Pin6=PB3
 Mcu.Pin7=VP_RTC_VS_RTC_Activate
@@ -99,6 +100,7 @@ TIM2.Period=49999
 TIM4.Period=49999
 PA13.Mode=Trace_Asynchronous_SW
 ProjectManager.FreePins=false
+NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
@@ -137,9 +139,10 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM1.Period=49999
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.APB1Freq_Value=36000000
+RTC.Seconds_A-RTC\ OUT=10
 ProjectManager.CustomerFirmwarePackage=
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.LibraryCopy=1
 PA8.PinState=GPIO_PIN_RESET
-isbadioc=true
+isbadioc=false
