--- a/Timers/Timers.ioc
+++ b/Timers/Timers.ioc
@@ -3,25 +3,27 @@ Mcu.Family=STM32F1
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 ProjectManager.MainLocation=Core/Src
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 RCC.MCOFreq_Value=72000000
 ProjectManager.ProjectFileName=Timers.ioc
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
-Mcu.PinsNb=14
+Mcu.PinsNb=16
 ProjectManager.NoMain=false
 TIM1.IPParameters=Prescaler,Period
 RCC.PLLCLKFreq_Value=72000000
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
-VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 PC13-TAMPER-RTC.Signal=RTC_OUT
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+RCC.RTCFreq_Value=40000
 RCC.ADCFreqValue=36000000
 ProjectManager.DefaultFWLocation=true
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 PD0-OSC_IN.Signal=RCC_OSC_IN
 ProjectManager.DeletePrevious=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -48,27 +50,30 @@ TIM2.IPParameters=Prescaler,Period
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
 TIM3.Period=49999
+PA9.Signal=GPIO_Output
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-RTC.IPParameters=Seconds_A-RTC OUT
+RTC.IPParameters=Seconds_A-RTC OUT,Format,AutoPrediv
 PA8.GPIOParameters=PinState
-Mcu.Pin6=PB3
-Mcu.Pin7=VP_RTC_VS_RTC_Activate
+Mcu.Pin6=PA9
+RTC.Format=RTC_FORMAT_BCD
+Mcu.Pin7=PA13
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 ProjectManager.RegisterCallBack=
 PC13-TAMPER-RTC.Locked=true
-Mcu.Pin8=VP_RTC_VS_RTC_Calendar
+Mcu.Pin8=PA14
 RCC.USBFreq_Value=72000000
-Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.Pin9=PB3
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 TIM4.Prescaler=7199
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 RCC.AHBFreq_Value=72000000
 Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin2=PC15-OSC32_OUT
 PD0-OSC_IN.Mode=HSE-External-Oscillator
-Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA8
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
+Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin5=PA8
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -86,6 +91,7 @@ MxDb.Version=DB.6.0.21
 RCC.APB2Freq_Value=72000000
 ProjectManager.BackupPrevious=false
 MxCube.Version=6.2.1
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PA14.Mode=Trace_Asynchronous_SW
 TIM3.Prescaler=7199
@@ -93,6 +99,7 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
 TIM3.IPParameters=Prescaler,Period
+PA9.Locked=true
 PA8.Signal=GPIO_Output
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -101,7 +108,7 @@ TIM4.Period=49999
 PA13.Mode=Trace_Asynchronous_SW
 ProjectManager.FreePins=false
 NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
 ProjectManager.HalAssertFull=false
@@ -124,19 +131,21 @@ ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA14.Signal=SYS_JTCK-SWCLK
-VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 ProjectManager.HeapSize=0x200
+Mcu.Pin15=VP_TIM4_VS_ClockSourceINT
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin13=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
 ProjectManager.ComputerToolchain=false
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=VP_RTC_VS_RTC_Activate
 RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM1.Period=49999
+RTC.AutoPrediv=RTC_AUTO_1_SECOND
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.APB1Freq_Value=36000000
 RTC.Seconds_A-RTC\ OUT=10
