another attempt to configure RTC

--- a/Timers/Timers.ioc
+++ b/Timers/Timers.ioc
@@ -16,7 +16,7 @@ RCC.PLLCLKFreq_Value=72000000
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
 PC13-TAMPER-RTC.Signal=RTC_OUT
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
-RCC.RTCFreq_Value=40000
+RCC.RTCFreq_Value=32768
 RCC.ADCFreqValue=36000000
 ProjectManager.DefaultFWLocation=true
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -52,10 +52,10 @@ RCC.APB2TimFreq_Value=72000000
 TIM3.Period=49999
 PA9.Signal=GPIO_Output
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-RTC.IPParameters=Seconds_A-RTC OUT,Format,AutoPrediv
+RTC.IPParameters=Format,Seconds_A-RTC OUT,AutoPrediv,AsynchPrediv
 PA8.GPIOParameters=PinState
 Mcu.Pin6=PA9
-RTC.Format=RTC_FORMAT_BCD
+RTC.Format=RTC_FORMAT_BIN
 Mcu.Pin7=PA13
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 ProjectManager.RegisterCallBack=
@@ -81,6 +81,7 @@ PB3.Mode=Trace_Asynchronous_SW
 PA8.Locked=true
 board=custom
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 ProjectManager.LastFirmware=true
 RCC.PLLMUL=RCC_PLL_MUL9
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -99,6 +100,7 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
 TIM3.IPParameters=Prescaler,Period
+RTC.AsynchPrediv=32768
 PA9.Locked=true
 PA8.Signal=GPIO_Output
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -108,7 +110,7 @@ TIM4.Period=49999
 PA13.Mode=Trace_Asynchronous_SW
 ProjectManager.FreePins=false
 NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
 ProjectManager.HalAssertFull=false
@@ -145,7 +147,7 @@ Mcu.Pin10=VP_RTC_VS_RTC_Activate
 RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM1.Period=49999
-RTC.AutoPrediv=RTC_AUTO_1_SECOND
+RTC.AutoPrediv=0
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.APB1Freq_Value=36000000
 RTC.Seconds_A-RTC\ OUT=10
