--- a/Timers/Timers.ioc
+++ b/Timers/Timers.ioc
@@ -100,7 +100,7 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
 TIM3.IPParameters=Prescaler,Period
-RTC.AsynchPrediv=32768
+RTC.AsynchPrediv=RTC_AUTO_1_SECOND
 PA9.Locked=true
 PA8.Signal=GPIO_Output
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -147,7 +147,7 @@ Mcu.Pin10=VP_RTC_VS_RTC_Activate
 RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM1.Period=49999
-RTC.AutoPrediv=0
+RTC.AutoPrediv=RTC_AUTO_1_SECOND
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.APB1Freq_Value=36000000
 RTC.Seconds_A-RTC\ OUT=10
