--- a/SST_ADC.ioc
+++ b/SST_ADC.ioc
@@ -6,7 +6,7 @@ Dma.ADC1.0.Instance=DMA1_Channel1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
-Mcu.PinsNb=4
+Mcu.PinsNb=5
 ADC1.ContinuousConvMode=ENABLE
 ProjectManager.NoMain=false
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode
@@ -14,10 +14,10 @@ RCC.PLLCLKFreq_Value=8000000
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-VP_SYS_VS_ND.Mode=No_Debug
 PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
 ProjectManager.StackSize=0x400
+PA13.Signal=SYS_JTMS-SWDIO
 Mcu.IP4=SYS
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP2=NVIC
@@ -37,9 +37,10 @@ ProjectManager.RegisterCallBack=
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 PA1.Signal=ADCx_IN1
 Mcu.Pin0=PA1
-Mcu.Pin1=VP_ADC1_Vref_Input
-Mcu.Pin2=VP_SYS_VS_ND
-Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.Pin1=PA13
+Mcu.Pin2=PA14
+Mcu.Pin3=VP_ADC1_Vref_Input
+Mcu.Pin4=VP_SYS_VS_Systick
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -54,14 +55,15 @@ MxDb.Version=DB.6.0.21
 RCC.APB2Freq_Value=8000000
 ProjectManager.BackupPrevious=false
 MxCube.Version=6.2.1
+PA14.Mode=Serial_Wire
 SH.ADCx_IN1.ConfNb=1
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value
 ProjectManager.AskForMigrate=true
@@ -82,6 +84,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA14.Signal=SYS_JTCK-SWCLK
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 ProjectManager.HeapSize=0x200
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
