--- a/Timers/Timers.ioc
+++ b/Timers/Timers.ioc
@@ -6,14 +6,17 @@ ProjectManager.MainLocation=Core/Src
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 RCC.MCOFreq_Value=72000000
 ProjectManager.ProjectFileName=Timers.ioc
+Dma.ADC1.0.Instance=DMA1_Channel1
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
-Mcu.PinsNb=16
+Mcu.PinsNb=17
+ADC1.ContinuousConvMode=ENABLE
 ProjectManager.NoMain=false
 TIM1.IPParameters=Prescaler,Period
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
 RCC.PLLCLKFreq_Value=72000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true
 PC13-TAMPER-RTC.Signal=RTC_OUT
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 RCC.RTCFreq_Value=32768
@@ -31,33 +34,38 @@ ProjectManager.StackSize=0x400
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 PA13.Signal=SYS_JTMS-SWDIO
-Mcu.IP4=TIM1
+Mcu.IP4=RTC
 RCC.FCLKCortexFreq_Value=72000000
-Mcu.IP5=TIM2
+Mcu.IP5=SYS
+Mcu.IP2=NVIC
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP2=RTC
-Mcu.IP3=SYS
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
+Mcu.IP3=RCC
+Mcu.IP0=ADC1
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Mcu.IP1=DMA
 TIM1.Prescaler=7199
 Mcu.UserConstants=
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 ProjectManager.TargetToolchain=STM32CubeIDE
 TIM4.IPParameters=Prescaler,Period
+Dma.ADC1.0.Mode=DMA_CIRCULAR
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=72000000
-Mcu.IPNb=8
+Mcu.IPNb=10
 TIM2.IPParameters=Prescaler,Period
 ProjectManager.PreviousToolchain=
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 RCC.APB2TimFreq_Value=72000000
 TIM3.Period=49999
 PA9.Signal=GPIO_Output
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 RTC.IPParameters=Seconds_A-RTC OUT
 PA8.GPIOParameters=PinState
 Mcu.Pin6=PA9
-Mcu.Pin7=PA13
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+Mcu.Pin7=PA13
 ProjectManager.RegisterCallBack=
 PC13-TAMPER-RTC.Locked=true
 Mcu.Pin8=PA14
@@ -66,6 +74,7 @@ Mcu.Pin9=PB3
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 TIM4.Prescaler=7199
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 RCC.AHBFreq_Value=72000000
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
@@ -84,10 +93,12 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 ProjectManager.LastFirmware=true
 RCC.PLLMUL=RCC_PLL_MUL9
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PC13-TAMPER-RTC.Mode=RTC OUT
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.VCOOutput2Freq_Value=8000000
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
+VP_ADC1_Vref_Input.Mode=IN-Vrefint
 MxDb.Version=DB.6.0.21
 RCC.APB2Freq_Value=72000000
 ProjectManager.BackupPrevious=false
@@ -96,9 +107,11 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PA14.Mode=Trace_Asynchronous_SW
 TIM3.Prescaler=7199
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
+VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 TIM3.IPParameters=Prescaler,Period
 PA9.Locked=true
 PA8.Signal=GPIO_Output
@@ -112,41 +125,52 @@ NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
+Dma.RequestsNb=1
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 ProjectManager.ProjectName=Timers
 ProjectManager.UnderRoot=true
-Mcu.IP6=TIM3
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IP6=TIM1
 RCC.PLLMCOFreq_Value=36000000
-Mcu.IP7=TIM4
+Mcu.IP7=TIM2
 ProjectManager.CoupleFile=false
 PB3.Signal=SYS_JTDO-TRACESWO
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 RCC.SYSCLKFreq_VALUE=72000000
 Mcu.Package=LQFP48
 TIM2.Prescaler=7199
 RCC.TimSysFreq_Value=72000000
+ADC1.master=1
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
+ADC1.Rank-1\#ChannelRegularConversion=1
 ProjectManager.ToolChainLocation=
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA14.Signal=SYS_JTCK-SWCLK
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
 ProjectManager.ComputerToolchain=false
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin10=VP_RTC_VS_RTC_Activate
+ADC1.NbrOfConversionFlag=1
+Mcu.Pin11=VP_RTC_VS_RTC_Activate
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=VP_ADC1_Vref_Input
 RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM1.Period=49999
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Dma.Request0=ADC1
 RCC.APB1Freq_Value=36000000
 RTC.Seconds_A-RTC\ OUT=5
 ProjectManager.CustomerFirmwarePackage=
